--- a/elements.html
+++ b/elements.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head> 
-        <title> KeiBlackleys' Page </title>
+        <title> Elements - KeiBlackley </title>
 
         <meta charset="UTF-8">
         <meta name="description" content="">
@@ -65,7 +65,7 @@
             </nav>
 
             <section class="banner">
-                <img src="assets/images/avatar.png" alt="Avatar" />
+                <a href="/"> <img src="assets/images/avatar.png" alt="Avatar" /> </a>
             </section>
         </header>
 
